Update dropdown menu readability issues

--- a/static/style.css
+++ b/static/style.css
@@ -115,17 +115,14 @@ header .dropdown-item {
     padding-inline: 1.5rem;
 }
 
-header .dropdown-item:active img {
+.dropdown-item:active img {
     filter: invert(100%) sepia(0%) saturate(7478%) hue-rotate(75deg) brightness(99%) contrast(106%);
-}
-
-header .dropdown-item:active {
-    color: white !important;
-    transition-property: none;
 }
 
 .dropdown-item:active {
     background-color: var(--pithia-blue);
+    color: white !important;
+    transition-property: none;
 }
 
 .user-dropdown {
